--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BOOHA - Speciality Coffee & Matcha Bar | Candolim, Goa</title>
-    <meta name="description" content="Savor the art of speciality coffee & matcha at BOOHA. A premium coffee bar, eatery & patisserie in Candolim, Goa. Open 10 AM - 7 PM." />
-    <meta name="author" content="BOOHA Café" />
+    <title>Sample Cafe - Coffee Bar & Eatery | Candolim, Goa</title>
+    <meta name="description" content="Coffee bar and eatery in Candolim, Goa. Specialty coffee, matcha, fresh pastries and food. Open daily 8 AM - 8 PM." />
+    <meta name="author" content="Sample Cafe" />
 
-    <meta property="og:title" content="BOOHA - Speciality Coffee & Matcha Bar" />
-    <meta property="og:description" content="Premium coffee bar, eatery & patisserie in Candolim, Goa" />
+    <meta property="og:title" content="Sample Cafe - Coffee Bar & Eatery" />
+    <meta property="og:description" content="Coffee bar and eatery in Candolim, Goa" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@booha.in" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@samplecafe" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
