--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/coffee-favicon.svg" />
     <title>Sample Cafe - Coffee Bar & Eatery | Candolim, Goa</title>
     <meta name="description" content="Coffee bar and eatery in Candolim, Goa. Specialty coffee, matcha, fresh pastries and food. Open daily 8 AM - 8 PM." />
     <meta name="author" content="Sample Cafe" />
